2007-02-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>

        * Format README in reStructuedText

2007-02-28  Quentin Mathe <qmathe@club-internet.fr>

	* QuickTest.io: Added Io script to test basic IconKit features by enabling 
	to interact quickly and directly. Script interest and code quality is 
	really low for now...

2006-11-28  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIconProvider.m: Fixed icons path by creating the cache 
	in User domain rather than Local.
	* Source/IKApplicationIconProvider.m: Added logs statement to aid debugging. 
	Fixed composited icons path by creating the cache in User domain rather than 
	Local.
	* Source/NSFileManager+IconKit.m: Fixed file manager related calls by
	referencing the singleton object rather than 'self' (NSFileManager is 
	probably a class cluster).

2006-11-28  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/IKIcon.h:
	* Headers/IKCompositor.h:
	* Headers/IconKit.h:
	Fixed headers import within the library and updated the umbrella header to 
	include more headers. This allows to use the library now (previously project
	compilation would have failed on header import).
	* Source/GNUmakefile: Updated to install headers even if 'test' isn't set to 
	'no'. Removed headers related lines which serve no purpose.

2006-11-02  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIconProvider.m:
	* Source/NSFileManager+IconKit.m:
	* Source/IKApplicationIconProvider.m:
	* Source/GNUmakefile:
	Got of rid of all the remaining warnings except two. Declared HAVE_UKTEST 
	to put test methods between conditional directives based on this define.

2006-10-29  Quentin Mathe <qmathe@club-internet.fr>

	* Source/GNUmakefile:
	* Source/IKIcon.m:
	* Source/IKCompositor.m:
	* Headers/IKIcon.h:
	* Headers/IKIconPositions.h:
	Shut down various compiler warnings and replaced include statements by 
	import ones. truncf is now used through GCC equivalent builtin function.

2006-09-27  Quentin Mathe <qmathe@club-internet.fr>
    